VSE and border render incompatable #49121

Closed
opened 2016-08-20 01:26:48 +02:00 by Mike Futcher · 6 comments

Leaving border select on while using the VSE results in either a garbled mess of a render, or crashing.

Blender version: 2.77a

Windows 10,
Intel Core i5-6300HQ @ 2.30Ghz
8.00 GB

To re-create the problem:

Open Blender,
Press Keypad 0 to select camera view,
Press Shift-B and drag a box to select a border render
Change the 3D view to the VSE editor
Add a video
Press 12 to render a frame, or click Render Animation
The image is a garbled mess.

Leaving border select on while using the VSE results in either a garbled mess of a render, or crashing. Blender version: 2.77a Windows 10, Intel Core i5-6300HQ @ 2.30Ghz 8.00 GB To re-create the problem: Open Blender, Press Keypad 0 to select camera view, Press Shift-B and drag a box to select a border render Change the 3D view to the VSE editor Add a video Press 12 to render a frame, or click Render Animation The image is a garbled mess.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MikeFutcher

Added subscriber: @MikeFutcher
Author

Ahhhh... a little more testing...

Starting from the end of the last set of instructions,

Set the video image/video output type to H.264
Pressing Render Animation now causes Blender to crash.

I think this may be due to the H.264 codec only working when it's dimensions are multiples of 8.

Ahhhh... a little more testing... Starting from the end of the last set of instructions, Set the video image/video output type to H.264 Pressing Render Animation now causes Blender to crash. I think this may be due to the H.264 codec only working when it's dimensions are multiples of 8.
Sergey Sharybin self-assigned this 2016-08-23 12:45:11 +02:00

This issue was referenced by 22b913a278

This issue was referenced by 22b913a27881b9bb8c4cb1738c803c8089ca0393

Looked into the issue.

Unfortunately, it's not that trivial to make sequencer aware of the border rendering and the way how render result is fed from sequencer to the render result adds more complexity to this..

While corrupted renders and crashes are really bad, for now i'll add a code which prevents rendering with sequencer and border enabled at the same time.

Surely, making sequencer aware of border rendering will be really cool, but that'd happen as general development. Added a note about this to our TODO list: https://wiki.blender.org/index.php/Dev:Source/Development/Todo/Tools#Sequence_Editor

Looked into the issue. Unfortunately, it's not that trivial to make sequencer aware of the border rendering and the way how render result is fed from sequencer to the render result adds more complexity to this.. While corrupted renders and crashes are really bad, for now i'll add a code which prevents rendering with sequencer and border enabled at the same time. Surely, making sequencer aware of border rendering will be really cool, but that'd happen as general development. Added a note about this to our TODO list: https://wiki.blender.org/index.php/Dev:Source/Development/Todo/Tools#Sequence_Editor

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49121
No description provided.