Fix T49121: VSE and border render incompatible

For now just check for such incompatible configuration, real fix
requires quite some work to be done.